# Loriens-Guide

./: .cloudflare-pages.json  .env.example  .gitignore  ARCHITECTURE.md  CAMERA_SERVER.md  DEPLOYMENT.md  HACKATHON_API.md  RAILWAY_DEPLOY.md  README.md  app.js  app.py  camera_server.py  deploy-cloudflare.bat  example_client.py  pyproject.toml  requirements.txt  server.py  test_api.py  test_app.py  test_hackathon_api.py  test_vlm_service.py  vlm_service.py  wrangler.toml
.github/: copilot-instructions.md
backend/: app.py  camera_registry.json
database/: README.md  cameras.json
frontend/: _headers  app.js  index.html  styles.css
src/loriens_guide/: app.py  cameras.json  server.py  vlm_service.py
test/: conftest.py  test_api.py  test_app.py  test_vlm_service.py
videos/: README.md
